---
source: crates/pcb-zen/tests/interface_templates_snapshot.rs
assertion_line: 27
expression: snapshot_output
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
    (comp (ref "R1")
      (value "resistor")
      (footprint "stdlib_kicad-footprints_Resistor_SMD:R_0402_1005Metric")
      (libsource (lib "lib") (part "resistor") (description "unknown"))
      (sheetpath (names "R1.R") (tstamps "d527c2b8-3606-5386-bbed-5a45ed7b31a6"))
      (tstamps "d527c2b8-3606-5386-bbed-5a45ed7b31a6")
      (property (name "Reference") (value "R1"))
      (property (name "description") (value "1k"))
      (property (name "package") (value "0402"))
      (property (name "resistance") (value "1k"))
      (property (name "value") (value "1k"))
    )
  )
  (libparts
    (libpart (lib "lib") (part "?")
      (description "")
      (docs "~")
      (footprints
        (fp "*"))
      (pins
        (pin (num "1") (name "1") (type "stereo"))
        (pin (num "2") (name "2") (type "stereo"))
      )
    )
  )
  (nets
    (net (code "1") (name "GND")
      (node (ref "R1") (pin "2") (pintype "stereo"))
    )
    (net (code "2") (name "PREFIX_MYTEST")
      (node (ref "R1") (pin "1") (pintype "stereo"))
    )
  )
)
